# sdn

./: .env  Cargo.toml  README.md
.sqlx/: query-7067b72b916cd7ea40f6d7c8aa8e123c8bafbaad5005284ce78deabdb3e88c6c.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 20240308_create_users_table.sql
src/: db.rs  main.rs  models.rs  users.rs
