[package]
name = "sdn"
version = "0.1.0"
edition = "2024"
authors = ["Ante Perišić <perisic.ante@gmail.com>"]

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.44.0", features = ["full"] }
